sys: fix deprecated use of new Integer